apps/media/lidarr/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media
  labels:
    app: lidarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
      - name: lidarr
        image: ghcr.io/linuxserver/lidarr:version-0.7.2.1878
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8686
          name: lidarr
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "300Mi"
            cpu: 1
        volumeMounts:
        - name: config
          mountPath: /config
        - name: music
          mountPath: /music
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: longhorn-pvc-lidarr
      - name: music
        nfs:
          server: 10.0.40.2
          path: /mnt/vault/Media/Music
      - name: downloads
        nfs:
          server: 10.0.40.2
          path: /mnt/vault/Media/downloads/completed
