apps/media/lidarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
spec:
  ports:
  - name: lidarr
    targetPort: lidarr
    port: 8686
  selector:
    app: lidarr
